buttons and remember me
made inner-nav into buttons instead of just regular ol' anchor tags and added an "[on]" and "[off]" to the Remember me so you can tell which state it's in.

--- a/components/sass/_login.scss
+++ b/components/sass/_login.scss
@@ -224,6 +224,10 @@ input[name="remember_me"] {
 .rm-rm.hot {
 	color: rgba(150,255,0,1);
 }
+.rm-rm #rm-rm {
+  margin-left: 8px;
+  font-size: 0.8em;
+}
 
 
 
