--- a/components/sass/_Theme-light.scss
+++ b/components/sass/_Theme-light.scss
@@ -44,6 +44,7 @@ a.verified {
 }
 .sidenav {
   background-color: #fff;
+  background-color: rgba(255,255,255,0.85);
   color: #757575;
   border-left: 1px solid #dfdfdf;
   a.cc-x {
@@ -328,6 +329,16 @@ p.logout,
 .manage-simple>p.logout>a {
   color: #757575;
 }
+.manage-simple>p.logout>a {
+  color: #fff;
+  background-color: #5693be;
+  &:hover {
+    background-color: #fff;
+    color: #5693be;
+    border-color: #5693be;
+  }
+}
+
 .manage-simple {
   border-color: #757575;
 }
