--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -61,13 +61,29 @@
 		padding: 1em 1em 0em;
 		font-size: 0.75em;
 		margin-bottom: 0;
+
 		& > a {
+      display: inline-block;
+      line-height: 1em;
 			text-decoration: none;
 			color: #fff; 
+      padding: 0.5em 1em;
+      border: 1px solid #fff;
+      border-radius: 3px;
+      margin-left: 5px;
+      margin: 3px 0 0 5px;
+      transition: all 0.2s ease;
+    
 			&:hover {
-				text-decoration: underline;
+				text-decoration: none;
+        color: #313131;
+        background-color: rgba(255,255,255,0.8);
 			}
 		}
+    & > a:first-of-type {
+      margin-left: 0;
+    }
+
 	}
 	&.review {
 		border-bottom: none;
