theme slide on nav complete

--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -491,3 +491,12 @@ a.apr {
 	top: 1em;
 	left: 0.5em;
 }
+
+
+
+#ct-dark,
+#ct-bright {
+  white-space: nowrap;
+  display: none;
+  // width: 100%;
+}
