first round of edits

--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -356,6 +356,10 @@
 
 
 }
+.tc-cc-x {
+  font-size: 0.75em;
+  padding: 1em 1em 1em 1.5em;
+}
 
 @keyframes in {
     0%   { transform: rotate(360deg); }
