added IP tracker to admin nav

--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -356,9 +356,14 @@
 
 
 }
+.admin-info {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2em;
+}
 .tc-cc-x {
   font-size: 0.75em;
-  padding: 1em 1em 1em 1.5em;
+  padding: 0.5em 1em 0.5em 1.5em;
 }
 
 @keyframes in {
