added add-my-ip to nav

--- a/components/sass/_Theme-light.scss
+++ b/components/sass/_Theme-light.scss
@@ -98,7 +98,14 @@ a.verified {
   background-attachment: fixed;  
 }
 
-
+.sidenav .no-frills {
+  a.ip-css {
+    &:hover {
+      color: #d47f11;
+      background-color: transparent;
+    } 
+  }
+}
 
 
 
