--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -341,6 +341,10 @@
 		margin-top: 0;
 		margin-bottom: 2em;
 	}
+  a.cc-x.ial {
+    margin-top: -2em;
+    margin-bottom: 0em;
+  }
 	i.fa-star {
 		color: gold;
 	}
@@ -352,9 +356,11 @@
   flex-direction: column;
   margin-bottom: 2em;
 }
+
+
 .sidenav a.tc-cc-x {
   font-size: 0.75em;
-  padding: 0.5em 1em 0.5em 1.5em;
+  padding: 0.5em 1em 0.5em 2.5em;
   cursor: default;
   &:hover {
     color: #818181;
@@ -390,7 +396,7 @@
   display: flex;
   font-size: 0.75em;
   color: #818181;
-  padding: 1em 0em 1em 1.5em;
+  padding: 1em 0em 1em 2.5em;
   a.ip-css {
     width: auto;
     margin: 0 0.25em;
