started on analytics page

--- a/components/sass/_Theme-light.scss
+++ b/components/sass/_Theme-light.scss
@@ -341,7 +341,8 @@ p.logout,
 .manage-simple>p.logout>a {
   color: #757575;
 }
-.manage-simple>p.logout>a {
+.manage-simple>p.logout>a,
+.manage-simple p.my-sort a.phpma {
   color: #fff;
   background-color: #5693be;
 
