--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -41,6 +41,25 @@
 		font-size: 0.8em;
 		margin-left: 0.5em;
 		margin-bottom: 0;
+    a.phpma {
+      display: inline-block;
+      line-height: 1em;
+      text-decoration: none;
+      color: #fff;
+      padding: 0.5em 1em;
+      border: 1px solid #fff;
+      border-radius: 3px;
+      margin-left: 5px;
+      margin: 3px 0 0 5px;
+      box-shadow: 0px 6px 4px -3px rgba(0, 0, 0, 0.3);
+      transition: all 0.15s ease;
+      &:hover {
+        transform: scale(0.9);
+        box-shadow: -1px 4px 3px -3px rgba(0, 0, 0, 0.86);
+        text-decoration: none;
+      }
+
+    }
 	}
 	& > h1 {
 		font-size: 1.4em;
@@ -139,13 +158,22 @@
 			margin-bottom: 1em;
 		}
 	}
+  &.analy {
+    display: flex;
+    align-items: center;
+  }
 }
 
 #ia-wrap {
   display: flex;
+  flex-direction: column;
   width: 100%;
   max-width: 900px;
   padding: 1em;
+  p {
+    display: block;
+    margin: 0.25em 0em;
+  }
 }
 
 
