--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -355,6 +355,11 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 2em;
+  i.fa-star {
+    font-size: 1em;
+    padding: 0em 0.5em 0em 1.5em;
+    color: gold;
+  }
 }
 
 
