--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -42,6 +42,12 @@
 			// bottom: -0.4em;
 			color: gold;
 		}
+
+    &.new-action {
+      background-color: #98e22b;
+    }
+
+    
 	}
 	.top-nav.admin-logged {
 		background-color: gold;
@@ -357,8 +363,8 @@
   margin-bottom: 2em;
   i.fa-star {
     font-size: 1em;
-    padding: 0em 0.5em 0em 1.5em;
-    color: gold;
+    padding: 0em 0.5em 0em 1em;
+    color: #98e22b;
   }
 }
 
