--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -55,6 +55,9 @@
 		border-right: 1px solid rgba(255,246,0,1);
 		border-bottom: 1px solid rgba(255,246,0,1);
 		border-left: 1px solid rgba(255,246,0,1);		
+    &.new-action {
+      background-color: #98e22b;
+    }
 	}
 }
 
