--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -103,6 +103,10 @@
         // color: #313131;
         // background-color: rgba(255,255,255,0.8);
 			}
+      &.new-action {
+        background-color: #98e22b;
+        color: #313131;
+      }
 		}
     & > a:first-of-type {
       margin-left: 0;
@@ -163,19 +167,6 @@
     align-items: center;
   }
 }
-
-#ia-wrap {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  max-width: 900px;
-  padding: 1em;
-  p {
-    display: block;
-    margin: 0.25em 0em;
-  }
-}
-
 
 p.address-this {
 	line-height: 1.5em;
