--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -1,13 +1,69 @@
 .ia-headwrap {
   display: flex;
-  flex-direction: column;
+  // flex-direction: column;
+  align-items: center;
   width: 100%;
   max-width: 900px;
   padding: 1em;
   p {
-    display: inline-block;
+    display: flex;
     margin: 0.25em 0em;
+  } 
+}
+.ia-ip-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+  max-width: 900px;
+  margin: 0 1em;
+  .col {
+    width: 50%;
+    h1 {
+      text-decoration: underline;
+    }
+    p.ip-notes {
+      display: block;
+      padding: 0.5em 1em;
+      font-size: 0.75em;
+      background-color: rgba(255,255,255,0.1);
+      margin: 0.5em 0;
+      width: 96%;
+      max-width: 350px;
+    }
   }
-  
+  .col-full-width {
+    width: 100%;
+    padding: 1em;
+  }
 }
 
+#manage-wrap {
+  #clean-up-btn {
+    display: flex;
+    align-items: center;
+    margin: 0 0 0 1em;
+  }
+  a.analytics-cleanup {
+    display: inline-block;
+    font-size: 0.75em;
+    letter-spacing: 1px;
+    cursor: pointer;
+    line-height: 1em;
+    text-decoration: none;
+    color: #fff;
+    padding: 0.5em 1em;
+    border: 1px solid #fff;
+    border-radius: 3px;
+    margin-left: 5px;
+    margin: 3px 0 0 5px;
+    box-shadow: 0px 6px 4px -3px rgba(0, 0, 0, 0.3);
+    transition: all 0.15s ease;
+    &:hover {
+      transform: scale(0.9);
+      box-shadow: -1px 4px 3px -3px rgba(0, 0, 0, 0.86);
+      text-decoration: none;
+    }
+  }
+
+}
