--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -13,7 +13,7 @@
 .ia-ip-list {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  // justify-content: space-around;
   width: 100%;
   max-width: 900px;
   margin: 0 1em;
