--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -10,6 +10,11 @@
     margin: 0.25em 0em;
   } 
 }
+@media screen and (max-width: 600px) {
+  .ia-headwrap {
+    padding: 0em 0em 1em;
+  }
+}
 .ia-ip-list {
   display: flex;
   flex-direction: row;
@@ -18,7 +23,7 @@
   max-width: 900px;
   margin: 0 1em;
   .col {
-    width: 50%;
+    // width: 50%;
     padding: 0em 1em;
     h1 {
       text-decoration: underline;
@@ -36,6 +41,15 @@
   .col-full-width {
     width: 100%;
     padding: 1em;
+  }
+}
+@media screen and (max-width: 600px) {
+  .ia-ip-list {
+    flex-direction: column;
+    margin: 0;
+    .col {
+      padding: 0em;
+    }
   }
 }
 
