--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -18,13 +18,15 @@
 .ia-ip-list {
   display: flex;
   flex-direction: row;
-  // justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
   max-width: 900px;
   margin: 0 1em;
   .col {
-    // width: 50%;
-    padding: 0em 1em;
+    flex: 1;
+    width: 98%;
+    padding: 1em;
+    margin: 0 0.25em 0 0;
     h1 {
       text-decoration: underline;
     }
@@ -34,13 +36,66 @@
       font-size: 0.75em;
       background-color: rgba(255,255,255,0.1);
       margin: 0.5em 0;
-      width: 96%;
-      max-width: 350px;
+      // max-width: 350px;
     }
+
+
+
+
+
+
+
+
+
+
+    &.unique-ips,
+    &.multi-visits {
+      border: 1px solid #fff;
+      padding: 1em;
+      margin-bottom: 1em;
+      .svna {
+        display: inline-block;
+        margin-bottom: 0.5em;
+        i {
+          margin-right: 0.25em;
+          opacity: 0.6;
+        }
+        a {
+          cursor: pointer;
+          transition: all 0.2s ease;
+          &:hover {
+            color: #22b629;
+          }
+        }
+      }
+
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   }
   .col-full-width {
     width: 100%;
     padding: 1em;
+    &.ds {
+      background-color: rgba(55,179,21,0.2);
+    }
+    &.dns {
+      background-color: rgba(179,21,21,0.2);
+    }
   }
 }
 @media screen and (max-width: 600px) {
