--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -43,14 +43,6 @@
     }
 
 
-
-
-
-
-
-
-
-
     &.unique-ips,
     &.multi-visits {
       border: 1px solid #fff;
@@ -73,19 +65,6 @@
       }
 
     }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -138,5 +117,13 @@
       text-decoration: none;
     }
   }
-
+  a.tgl-msg {
+    cursor: pointer;
+    margin-left: 0.5em;
+    color: rgba(255,255,255,0.4);
+    transition: all 0.2s ease;
+    &:hover {
+      color: #fff;
+    }
+  }
 }
