--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -1,13 +1,13 @@
 .ia-headwrap {
   display: flex;
-  // flex-direction: column;
-  align-items: center;
+  flex-direction: column;
+  // align-items: center;
   width: 100%;
   max-width: 900px;
   padding: 1em;
   p {
     display: flex;
-    margin: 0.25em 0em;
+    margin: 0em;
   } 
 }
 @media screen and (max-width: 600px) {
