--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -21,7 +21,7 @@
   justify-content: space-between;
   width: 100%;
   max-width: 900px;
-  margin: 0 1em;
+  // margin: 0 1em;
   .col {
     flex: 1;
     width: 98%;
@@ -94,7 +94,7 @@
   #clean-up-btn {
     display: flex;
     align-items: center;
-    margin: 0 0 0 1em;
+    // margin: 0 0 0 1em;
   }
   a.analytics-cleanup {
     display: inline-block;
@@ -108,7 +108,8 @@
     border: 1px solid #fff;
     border-radius: 3px;
     margin-left: 5px;
-    margin: 3px 0 0 5px;
+    // margin: 3px 0 0 5px;
+    margin: 0.5em 0;
     box-shadow: 0px 6px 4px -3px rgba(0, 0, 0, 0.3);
     transition: all 0.15s ease;
     &:hover {
@@ -126,4 +127,31 @@
       color: #fff;
     }
   }
+}
+.aweek-wrap {
+  display: flex;
+  flex-direction: column;
+  margin: 1em 0;
+  width: 100%;
+  max-width: 250px;
+  .aweek-row {
+    display: flex;
+    align-items: center;
+    margin: 2px 0px;
+
+    .anum {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0px 5px;
+      width: 80px;
+    }
+    .aday {
+      padding: 0px 5px;
+      width: 200px;
+    }
+  }
+    .aweek-row:nth-child(even) {
+    background-color: rgba(255,255,255,0.1);
+  } 
 }
