--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -21,12 +21,21 @@
   justify-content: space-between;
   width: 100%;
   max-width: 900px;
-  // margin: 0 1em;
   .col {
+    display: flex;
+    flex-direction: column;
     flex: 1;
     width: 98%;
     padding: 1em;
     margin: 0 0.25em 0 0;
+    transition: all 0.2s ease;
+    &.sp {
+      margin-top: 1em;
+      transition: all 0.2s ease;
+    }
+    &.v {
+      border-left: 1px solid rgba(255,255,255,0.3);
+    }
     h1 {
       text-decoration: underline;
     }
@@ -128,10 +137,11 @@
     }
   }
 }
+
 .aweek-wrap {
   display: flex;
   flex-direction: column;
-  margin: 1em 0;
+  // margin: 1em 0;
   width: 100%;
   max-width: 250px;
   .aweek-row {
@@ -154,4 +164,17 @@
     .aweek-row:nth-child(even) {
     background-color: rgba(255,255,255,0.1);
   } 
+}
+
+@media screen and (max-width: 800px) {
+  .ia-ip-list {
+    flex-direction: column;
+    .col.sp {
+      margin: 0;
+    }
+    .col.v {
+      border: none;
+    }
+  }
+
 }
