added theme popup

--- a/components/sass/_Theme-light.scss
+++ b/components/sass/_Theme-light.scss
@@ -739,7 +739,7 @@ footer #footer-contact-form span {
 
 .ia-ip-list {
   .col {
-    &.v {
+    &.b {
       border-left: 1px solid rgba(79,185,247,0.8);
     }
   }
