--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -33,8 +33,14 @@
       margin-top: 1em;
       transition: all 0.2s ease;
     }
-    &.v {
+    &.b {
+      flex: 0;
+      width: 1px;
+      margin: 1em 0;
       border-left: 1px solid rgba(255,255,255,0.3);
+    }
+    &.v {
+      // border-left: 1px solid rgba(255,255,255,0.3);
     }
     h1 {
       text-decoration: underline;
@@ -173,8 +179,35 @@
       margin: 0;
     }
     .col.v {
-      border: none;
+      margin-top: 1em;
+    }
+    .col.b {
+      display: none;
     }
   }
 
+}
+
+/* putting this here bc, why not? */
+a.theme-popup-btn {
+
+    padding: 1em;
+    color: #fff;
+    background-color: rgba(255,255,255,0.2);
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    width: 96%;
+    max-width: 300px;
+    margin: 1em auto;
+    transition: all 0.2s ease;
+    &:hover {
+      translate: scale(0.9);
+    }
+
+}
+#theme-options p.poprt {
+  width: 100%;
+  text-align: right;
+  font-size: 0.8em;
 }
