--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -200,14 +200,24 @@ a.theme-popup-btn {
     width: 96%;
     max-width: 300px;
     margin: 1em auto;
-    transition: all 0.2s ease;
+    transform: scale(1);
+    box-shadow: 0px 6px 4px -3px rgba(0,0,0,0.3);
+    transition: all 0.15s ease;
     &:hover {
-      translate: scale(0.9);
+      transform: scale(0.9);
+      box-shadow: -1px 4px 3px -3px rgba(0,0,0,0.86);
     }
 
 }
-#theme-options p.poprt {
-  width: 100%;
-  text-align: right;
-  font-size: 0.8em;
+
+
+#theme-options {
+  h1 i.fa-lightbulb {
+    transform: rotate(-28deg);
+  }
+  p.poprt {
+    width: 100%;
+    text-align: right;
+    font-size: 0.8em;    
+  }
 }
