--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -44,13 +44,14 @@
     }
     h1 {
       text-decoration: underline;
+      display: inline-block;
     }
     p.ip-notes {
       display: block;
       padding: 0.5em 1em;
       font-size: 0.75em;
       background-color: rgba(255,255,255,0.1);
-      margin: 0.5em 0;
+      margin: 0.5em 0 0.75em;
       // max-width: 350px;
     }
     p.expl {
@@ -63,14 +64,16 @@
       border: 1px solid #fff;
       padding: 1em;
       margin-bottom: 1em;
-      .svna {
-        display: inline-block;
-        margin-bottom: 0.5em;
+      .div-svna {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 0.25em;
         i {
           margin-right: 0.25em;
           opacity: 0.6;
         }
-        a {
+        a.svna {
+          margin-bottom: 0.25em;
           cursor: pointer;
           transition: all 0.2s ease;
           &:hover {
@@ -78,10 +81,7 @@
           }
         }
       }
-
     }
-
-
 
   }
   .col-full-width {
@@ -95,6 +95,14 @@
     }
   }
 }
+
+#replace-this {
+  a.tgl-msg {
+    display: inline-block;
+  }
+}
+
+
 @media screen and (max-width: 600px) {
   .ia-ip-list {
     flex-direction: column;
