may have to roll back one
not sure what I've done here but it no longer deletes... if it did before.

--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -37,6 +37,7 @@
       flex: 0;
       width: 1px;
       margin: 1em 0;
+      padding: 0px;
       border-left: 1px solid rgba(255,255,255,0.3);
     }
     &.v {
