checking in while I go back
back to try and figure out when this delete IN business worked to begin with - but I don't want to lose the changes I made in CSS. only files that need attention are query_functions, internal_anlaytics and process-analytics

--- a/components/sass/_Theme-light.scss
+++ b/components/sass/_Theme-light.scss
@@ -354,6 +354,13 @@ p.logout,
     // border-color: #5693be;
   }
 }
+.manage-simple p.my-sort a.phpma {
+  background-color: #efeff0;
+  border: 1px solid #d9d9d9;
+  .pc {
+    color: #6c78af;
+  }
+}
 
 #manage-wrap {
   #clean-up-btn {
