back to making progress
pc end of day commit

--- a/components/sass/_Theme-light.scss
+++ b/components/sass/_Theme-light.scss
@@ -388,6 +388,9 @@ p.logout,
 .ia-ip-list .col p.ip-notes {
   background-color: rgba(79,185,247,0.2);
 }
+.ia-ip-list .col.multi-visits .div-svna a.svna.bb {
+  border-bottom: 1px dotted rgba(79,185,247,0.85);
+}
 
 
 .manage-simple {
