--- a/components/sass/_Theme-light.scss
+++ b/components/sass/_Theme-light.scss
@@ -349,9 +349,6 @@ p.logout,
   box-shadow: 0px 6px 4px -3px rgba(0, 0, 0, 0.3);
   &:hover {
     box-shadow: -1px 4px 3px -3px rgba(0, 0, 0, 0.86);
-    // background-color: #fff;
-    // color: #5693be;
-    // border-color: #5693be;
   }
 }
 .manage-simple p.my-sort a.phpma {
@@ -361,6 +358,13 @@ p.logout,
     color: #6c78af;
   }
 }
+
+.manage-simple p.my-sort a.er {
+  color: #f13030;
+}
+
+
+
 
 #manage-wrap {
   #clean-up-btn {
