--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -112,10 +112,8 @@
       color: #fff;
       padding: 0.5em 1em;
       border: 1px solid #fff;
-
-background-color: rgba(239,239,240,0.25);
-  border: 1px solid #d9d9d9;
-
+      background-color: rgba(239,239,240,0.25);
+      border: 1px solid #d9d9d9;
       border-radius: 3px;
       margin-left: 5px;
       margin: 3px 0 0 5px;
@@ -136,6 +134,16 @@ background-color: rgba(239,239,240,0.25);
         font-style: italic;
         font-weight: bold;
         color: #f89c0e;
+      }
+    }
+    a.er {
+      display: inline-block;
+      font-size: 1.3em;
+      color: #ff7171;
+      margin-left: 1em;
+      transition: all 0.15s ease;
+      &:hover {
+        transform: scale(0.9);
       }
     }
   }
