--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -52,21 +52,20 @@
     width: 96%;
     max-width: 55px;
     display: flex;
-    // justify-content: flex-end;
     margin-right: 120px;
     cursor: pointer;
     background-color: red;
     color: #fff;
-    // padding: 0.5em 1em 0.5em 1em;
-    // margin-top: -0.25em;
-    border-top: none;
-    border-right: 1px solid rgba(255,255,255,0.6);
-    border-bottom-right-radius: 3px;
-    border-bottom: 1px solid rgba(255,255,255,0.6);
-    border-bottom-left-radius: 3px;
-    border-left: 1px solid rgba(255,255,255,0.6);
-    transition: all 0.2s ease; 
 
+    // border-top: none;
+    // border-right: 1px solid rgba(255,255,255,0.6);
+    // border-bottom-right-radius: 3px;
+    // border-bottom: 1px solid rgba(255,255,255,0.6);
+    // border-bottom-left-radius: 3px;
+    // border-left: 1px solid rgba(255,255,255,0.6);
+
+
+    transition: all 0.2s ease; 
     a.per {
       color: #fff;
       padding: 0.5em 1em 0.5em 1em;
@@ -76,6 +75,17 @@
         background-color: red;
       }
     }
+
+
+    &.on {
+      border-top: none;
+      border-right: 1px solid rgba(255,255,255,0.6);
+      border-bottom-right-radius: 3px;
+      border-bottom: 1px solid rgba(255,255,255,0.6);
+      border-bottom-left-radius: 3px;
+      border-left: 1px solid rgba(255,255,255,0.6);
+    }
+
 
   }
 
@@ -97,6 +107,15 @@
     }
   }
 }
+// @media screen and (max-width: 600px) {
+//   #navigation {
+//     .phperror {
+//       a.per {
+//         padding: 0.51em 1em 0.51em 1em;
+//       }
+//     }
+//   }
+// }
 
 #navigation.sm-g .top-nav {
 	width: 6em;
