--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -101,6 +101,11 @@
 }
 
 .manage-simple {
+  &.analy {
+    display: flex;
+    align-items: center;
+    margin-top: -0.5em;
+  }
   p.my-sort {
     a.phpma {
       display: inline-block;
@@ -143,7 +148,7 @@
         transform: scale(0.9);
       }
     }
-  }
+  }  
 }
 
 
@@ -166,6 +171,34 @@
 }
 
 #manage-wrap {
+  .db-mng-links {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 900px;
+    margin: -0.75em 0 0 0.5em;
+    a.link {
+      display: inline-block;
+      line-height: 1em;
+      font-size: 0.75em;
+      text-decoration: none;
+      color: #fff;
+      padding: 0.5em 1em;
+      border: 1px solid #fff;
+      border-radius: 3px;
+      margin-left: 5px;
+      margin: 3px 0 0 5px;
+      box-shadow: 0px 6px 4px -3px rgba(0, 0, 0, 0.3);
+      transition: all 0.2s ease;
+      &:hover {
+        transform: scale(0.9);
+        box-shadow: -1px 4px 3px -3px rgba(0, 0, 0, 0.86);
+      }
+      i {
+        margin-right: 0.5em;
+      }
+    }
+  }
   #clean-up-btn {
     display: flex;
     align-items: center;
